disable the auto play on small screens and minor fixes

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -12234,7 +12234,7 @@ footer .social-media .links a {
 }
 @media (min-width: 992px) {
   .featured .news .news-item.active {
-    height: 788.16px;
+    height: 65%;
   }
   .featured .news .news-item.active .news-image {
     height: 661.19px;
@@ -12292,6 +12292,23 @@ button:not(.navbar-toggler):hover {
 .hero {
   height: 600px;
 }
+.hero img {
+  height: 600px;
+}
+.hero .carousel-indicators {
+  left: auto !important;
+  right: auto !important;
+  gap: 10px;
+}
+.hero .carousel-indicators button {
+  all: unset !important;
+}
+.hero .carousel-indicators button svg {
+  transition: 0.5s;
+}
+.hero .carousel-indicators button.active svg path, .hero .carousel-indicators button:hover svg path {
+  fill: #C2D500;
+}
 .hero::before {
   content: "";
   position: absolute;
@@ -12302,29 +12319,11 @@ button:not(.navbar-toggler):hover {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 2.22%, rgba(0, 0, 0, 0.5) 73.4%);
   z-index: 1;
 }
-.hero img {
-  height: 600px;
-}
-.hero h2, .hero .h2 {
-  color: #fff;
-}
 .hero .hero-content {
   padding: 0 150px 80px 150px;
 }
 .hero .hero-content .hero-title {
   width: 762px;
-}
-.hero .hero-content .bullet {
-  fill: none;
-}
-.hero .hero-content .bullet:hover {
-  cursor: pointer;
-}
-.hero .hero-content .bullet:hover path {
-  fill: #C2D500;
-}
-.hero .hero-content .bullet.active path {
-  fill: #C2D500;
 }
 @media (max-width: 991.98px) {
   .hero .hero-content {
@@ -12584,26 +12583,6 @@ p {
   padding: 10px 30px 10px 150px;
   justify-content: space-between;
   align-items: center;
-}
-
-.carousel-indicators {
-  left: auto !important;
-  right: auto !important;
-  gap: 10px;
-}
-.carousel-indicators button {
-  all: unset !important;
-  cursor: pointer;
-}
-.carousel-indicators button svg {
-  opacity: 0.5;
-  transition: opacity 0.6s ease, transform 0.3s ease-in-out;
-}
-.carousel-indicators button.active svg, .carousel-indicators button:hover svg {
-  opacity: 1;
-}
-.carousel-indicators button.active svg path, .carousel-indicators button:hover svg path {
-  fill: #C2D500;
 }
 
 @media (max-width: 991.98px) {
