--- a/theme/sass/base/_index.scss
+++ b/theme/sass/base/_index.scss
@@ -81,29 +81,6 @@ p{
     }
 }
 
-.carousel-indicators{
-    left: auto !important;
-    right: auto !important;
-    gap: 10px;
-    button {
-        all: unset !important;
-        cursor: pointer;
-        svg {
-          opacity: 0.5;
-          transition: opacity 0.6s ease, transform 0.3s ease-in-out;
-        }
-  
-        &.active , &:hover{
-            svg{
-                opacity: 1;
-                path{
-                    fill: $primary-hover;
-                  }
-            }
-        }
-      }
-}
-
 @include media-breakpoint-down(lg){
     .banner{
         padding-top: 100px;
