--- a/theme/sass/pages/_home.scss
+++ b/theme/sass/pages/_home.scss
@@ -8,6 +8,27 @@
 
 .hero{
     height: 600px;
+    img{
+        height: 600px;
+    }
+    .carousel-indicators{
+        left: auto !important;
+        right: auto !important;
+        gap: 10px;
+        button {
+            all: unset !important;
+            svg {
+                transition: 0.5s;
+            }
+            &.active , &:hover{
+                svg{
+                    path{
+                        fill: $primary-hover;
+                    }
+                }
+            }
+        }
+    }
     &::before {
         content: "";
         position: absolute;
@@ -17,32 +38,12 @@
         height: 100%;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 2.22%, rgba(0, 0, 0, 0.50) 73.4%);; 
         z-index: 1; 
-      }
-    img{
-        height: 600px;
-    }
-    h2{
-        color: $white;
     }
 
     .hero-content{
         padding: 0 150px 80px 150px;
         .hero-title{
             width: 762px;
-        }
-        .bullet{
-            fill: none;
-            &:hover{
-                cursor: pointer;
-                path{
-                    fill: $primary-hover;
-                }
-            }
-            &.active{
-                path{
-                    fill: $primary-hover;
-                }
-            }
         }
     }
 
